# bitswapdetection

./: .gitignore  README.md  pyproject.toml
src/: robustness.py
src/TF/BitSwap/: BinarySwap.py  Perturbation.py  __init__.py
src/TF/EditModel/: edit.py  lambda_layers.py  utils.py
src/TF/Eval/: __init__.py  evaluation.py
src/TF/ImageNet/: model.py  testset.py  utils.py
src/Torch/BitSwap/: BinarySwap.py  Perturbation.py  __init__.py
src/Torch/EditModel/: __init__.py  edit.py
src/Torch/Eval/: evaluation.py
src/Torch/ImageNet/: __init__.py  testset.py
src/Utils/: __init__.py  clear.py  version.py
